--- a/app/src/main/res/navigation/my_nev.xml
+++ b/app/src/main/res/navigation/my_nev.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_nev"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/showNumberFragment">
 
 
     <fragment
@@ -31,31 +31,9 @@
         <action
             android:id="@+id/action_profileFragment_to_showNumberFragment"
             app:destination="@id/showNumberFragment" />
-        <action
-            android:id="@+id/action_profileFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
+
     </fragment>
-    <fragment
-        android:id="@+id/loginFragment"
-        android:name="com.example.yourcms.userAuthentication.LoginFragment"
-        android:label="fragment_login"
-        tools:layout="@layout/fragment_login" >
-        <action
-            android:id="@+id/action_loginFragment_to_registrationFragment"
-            app:destination="@id/registrationFragment" />
-    </fragment>
-    <fragment
-        tools:layout="@layout/fragment_registration"
-        android:id="@+id/registrationFragment"
-        android:name="com.example.yourcms.userAuthentication.RegistrationFragment"
-        android:label="RegistrationFragment" >
-        <action
-            android:id="@+id/action_registrationFragment_to_showNumberFragment"
-            app:destination="@id/showNumberFragment" />
-        <action
-            android:id="@+id/action_registrationFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
-    </fragment>
+
     <fragment
         android:id="@+id/updateDetailFragment"
         android:name="com.example.yourcms.update.UpdateDetailFragment"
