--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.YourCMS" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.YourCMS" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
         <item name="colorPrimary">#6C8E74</item>
         <item name="colorPrimaryVariant">#40744d</item>
         <item name="colorOnPrimary">@color/white</item>
